# myawesomescripts

./: CHANGELOG.md  README.md
.github/workflows/: publish-awsx2.yml  release-awsx2.yml
agents/commands/: changes-notes.md  commit.md  github-actions.md  label.md  link-issue.md  pr.md  pygrade.md  readme.md  review-pr.md  snyk-prs-close.md  taskfile.md
aws/: awsx
aws/awsx2/: Cargo.toml  LICENSE  README.md  build.rs  install.sh
aws/awsx2/src/: aws.rs  error.rs  main.rs  models.rs  proxy.rs  tunnel.rs  vpn.rs
aws/awsx2/src/tui/: app.rs  mod.rs  ui.rs
aws/awsx2/src/tui/pages/: instances.rs  mod.rs  tools.rs  tunnels.rs  vpn.rs
aws/s3/: mount_s3
backup/: duplicate-finder  file-organizer  smart-backup
development/: code-stats  git-cleanup  gitit  project-init
docker/: remove_project_images.sh
inactivity-shutdown/: inactivity-shutdown.service  inactivity-shutdown.sh  inactivity-shutdown.timer
network/: network-info  ping-monitor  port-scanner
python/: uvx
system/: cleanup  monitor  system-info
virtualization/: lima.yaml
virtualization/lxd/: mount_s3fs
virtualization/lxd/sbin/: gh_auth  gh_ssh  mc_alias
