[package]
name = "awsx2"
version = "0.3.0"
edition = "2021"
description = "AWS management CLI and interactive TUI — EC2 lifecycle, SSM tunnels, ALB-aware routing, nginx reverse proxy, and Client VPN with SAML"
license = "MIT"
repository = "https://github.com/JeanMaximilienCadic/myawesomescripts"
keywords = ["aws", "ec2", "ssm", "tui", "vpn"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "awsx2"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
libc = "0.2"
tiny_http = "0.12"
headless_chrome = "1"
url = "2"
regex = "1"
dirs = "5"
tempfile = "3"

[profile.release]
opt-level = 3
